# mortis-rs

./: Cargo.toml
.github/workflows/: release.yml
ci/: deps.sh
src/: cleaner.rs  firewall.rs  main.rs  state.rs
