[package]
name = "mortis-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
strip = true
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
rpath = false

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
clap = { version = "4.5.27", features = ["derive"] }
ipset = "0.8.0"
iptables = "0.5.2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
